generated/TommyWiCParser.py
# Generated from TommyWiC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TommyWiCParser ( Parser ):

    grammarFileName = "TommyWiC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Anything for my princes'", "'I did not hit her. It's not true! It's bullshit, I DID NOT!'", 
                     "'is a quack,'", "'is a duck'", "'is just a'", "'CHEEP CHEEP CHEEP!'", 
                     "'This is a great party, you invited all my friends'", 
                     "'Everybody betray me. I'm fed up with this world!'", 
                     "'I have an announcement to make. We are expecting'", 
                     "'Alright, let's toss the ball around'", "'Anyway, how is your sex life?'", 
                     "'I'm tired. I'm wasted. I love you, darling'", "'Yeah, you can say that again'", 
                     "'I'm so happy I have'", "'as my best friend, and I love'", 
                     "'so much'", "'Look, this is not right. You are living with a'", 
                     "'and doing sex with a'", "'It's bullshit!'", "'is great but'", 
                     "'is a crowd'", "'is as good in bed as he is at getting promotions... Awful!'", 
                     "'You're acting like a kid. Just grow up,'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'Oh hi Mark'", "'What a story, Mark'", 
                     "'Get out! Get out! Get out of'", "'You are taking'", 
                     "'and your stupid mother'", "'let's go inside and eat some'", 
                     "'life,'", "'apart,'", "'Just what sort of perverted filth are you planning to use'", 
                     "'for!?'", "'Come on, stop. It was a mistake'" ]

    symbolicNames = [ "<INVALID>", "TRUE", "FALSE", "NOTEQ1", "NOTEQ2", 
                      "ASSIGN1", "ASSIGN2", "WHILE", "END", "IF", "ELIF", 
                      "ELSE", "ENDIF", "PRINT", "AND1", "AND2", "AND3", 
                      "OR1", "OR2", "NOT", "LESS1", "LESS2", "DECREMENT", 
                      "INCREMENT", "ID", "INT", "STRING", "BEGINMAIN", "ENDMAIN", 
                      "SUBOP1", "DIVOP1", "ADDOP", "MULOP", "SUBOP2", "DIVOP2", 
                      "TRY1", "TRY2", "EXCEPT", "WS" ]

    RULE_program = 0
    RULE_main_func = 1
    RULE_statements = 2
    RULE_statement = 3
    RULE_print_stmt = 4
    RULE_print_str = 5
    RULE_print_expression = 6
    RULE_condition_stmt = 7
    RULE_while_stmt = 8
    RULE_try_except = 9
    RULE_var_assign = 10
    RULE_expression = 11
    RULE_operations = 12
    RULE_operation = 13

    ruleNames =  [ "program", "main_func", "statements", "statement", "print_stmt", 
                   "print_str", "print_expression", "condition_stmt", "while_stmt", 
                   "try_except", "var_assign", "expression", "operations", 
                   "operation" ]

    EOF = Token.EOF
    TRUE=1
    FALSE=2
    NOTEQ1=3
    NOTEQ2=4
    ASSIGN1=5
    ASSIGN2=6
    WHILE=7
    END=8
    IF=9
    ELIF=10
    ELSE=11
    ENDIF=12
    PRINT=13
    AND1=14
    AND2=15
    AND3=16
    OR1=17
    OR2=18
    NOT=19
    LESS1=20
    LESS2=21
    DECREMENT=22
    INCREMENT=23
    ID=24
    INT=25
    STRING=26
    BEGINMAIN=27
    ENDMAIN=28
    SUBOP1=29
    DIVOP1=30
    ADDOP=31
    MULOP=32
    SUBOP2=33
    DIVOP2=34
    TRY1=35
    TRY2=36
    EXCEPT=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main_func(self):
            return self.getTypedRuleContext(TommyWiCParser.Main_funcContext,0)


        def getRuleIndex(self):
            return TommyWiCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = TommyWiCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.main_func()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGINMAIN(self):
            return self.getToken(TommyWiCParser.BEGINMAIN, 0)

        def statements(self):
            return self.getTypedRuleContext(TommyWiCParser.StatementsContext,0)


        def ENDMAIN(self):
            return self.getToken(TommyWiCParser.ENDMAIN, 0)

        def getRuleIndex(self):
            return TommyWiCParser.RULE_main_func

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_func" ):
                return visitor.visitMain_func(self)
            else:
                return visitor.visitChildren(self)




    def main_func(self):

        localctx = TommyWiCParser.Main_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main_func)
        try:
            self.state = 36
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.match(TommyWiCParser.BEGINMAIN)
                self.state = 31
                self.statements()
                self.state = 32
                self.match(TommyWiCParser.ENDMAIN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.match(TommyWiCParser.BEGINMAIN)
                self.state = 35
                self.match(TommyWiCParser.ENDMAIN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TommyWiCParser.StatementContext)
            else:
                return self.getTypedRuleContext(TommyWiCParser.StatementContext,i)


        def getRuleIndex(self):
            return TommyWiCParser.RULE_statements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = TommyWiCParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 38
                    self.statement() 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_assign(self):
            return self.getTypedRuleContext(TommyWiCParser.Var_assignContext,0)


        def operations(self):
            return self.getTypedRuleContext(TommyWiCParser.OperationsContext,0)


        def print_stmt(self):
            return self.getTypedRuleContext(TommyWiCParser.Print_stmtContext,0)


        def condition_stmt(self):
            return self.getTypedRuleContext(TommyWiCParser.Condition_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(TommyWiCParser.While_stmtContext,0)


        def try_except(self):
            return self.getTypedRuleContext(TommyWiCParser.Try_exceptContext,0)


        def getRuleIndex(self):
            return TommyWiCParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = TommyWiCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.var_assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.operations(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.print_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.condition_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.while_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 49
                self.try_except()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def print_str(self):
            return self.getTypedRuleContext(TommyWiCParser.Print_strContext,0)


        def print_expression(self):
            return self.getTypedRuleContext(TommyWiCParser.Print_expressionContext,0)


        def getRuleIndex(self):
            return TommyWiCParser.RULE_print_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_stmt" ):
                return visitor.visitPrint_stmt(self)
            else:
                return visitor.visitChildren(self)




    def print_stmt(self):

        localctx = TommyWiCParser.Print_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_print_stmt)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.print_str()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.print_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_strContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(TommyWiCParser.PRINT, 0)

        def STRING(self):
            return self.getToken(TommyWiCParser.STRING, 0)

        def getRuleIndex(self):
            return TommyWiCParser.RULE_print_str

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_str" ):
                return visitor.visitPrint_str(self)
            else:
                return visitor.visitChildren(self)




    def print_str(self):

        localctx = TommyWiCParser.Print_strContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_print_str)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(TommyWiCParser.PRINT)
            self.state = 57
            self.match(TommyWiCParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(TommyWiCParser.PRINT, 0)

        def expression(self):
            return self.getTypedRuleContext(TommyWiCParser.ExpressionContext,0)


        def getRuleIndex(self):
            return TommyWiCParser.RULE_print_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_expression" ):
                return visitor.visitPrint_expression(self)
            else:
                return visitor.visitChildren(self)




    def print_expression(self):

        localctx = TommyWiCParser.Print_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_print_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(TommyWiCParser.PRINT)
            self.state = 60
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(TommyWiCParser.IF, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TommyWiCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(TommyWiCParser.ExpressionContext,i)


        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TommyWiCParser.StatementsContext)
            else:
                return self.getTypedRuleContext(TommyWiCParser.StatementsContext,i)


        def ENDIF(self):
            return self.getToken(TommyWiCParser.ENDIF, 0)

        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(TommyWiCParser.ELIF)
            else:
                return self.getToken(TommyWiCParser.ELIF, i)

        def ELSE(self):
            return self.getToken(TommyWiCParser.ELSE, 0)

        def getRuleIndex(self):
            return TommyWiCParser.RULE_condition_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition_stmt" ):
                return visitor.visitCondition_stmt(self)
            else:
                return visitor.visitChildren(self)




    def condition_stmt(self):

        localctx = TommyWiCParser.Condition_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condition_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(TommyWiCParser.IF)
            self.state = 63
            self.expression(0)
            self.state = 64
            self.statements()
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 65
                self.match(TommyWiCParser.ELIF)
                self.state = 66
                self.expression(0)
                self.state = 67
                self.statements()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 74
                self.match(TommyWiCParser.ELSE)
                self.state = 75
                self.statements()


            self.state = 78
            self.match(TommyWiCParser.ENDIF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(TommyWiCParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(TommyWiCParser.ExpressionContext,0)


        def statements(self):
            return self.getTypedRuleContext(TommyWiCParser.StatementsContext,0)


        def END(self):
            return self.getToken(TommyWiCParser.END, 0)

        def getRuleIndex(self):
            return TommyWiCParser.RULE_while_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stmt" ):
                return visitor.visitWhile_stmt(self)
            else:
                return visitor.visitChildren(self)




    def while_stmt(self):

        localctx = TommyWiCParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(TommyWiCParser.WHILE)
            self.state = 81
            self.expression(0)
            self.state = 82
            self.statements()
            self.state = 83
            self.match(TommyWiCParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Try_exceptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRY1(self):
            return self.getToken(TommyWiCParser.TRY1, 0)

        def operations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TommyWiCParser.OperationsContext)
            else:
                return self.getTypedRuleContext(TommyWiCParser.OperationsContext,i)


        def TRY2(self):
            return self.getToken(TommyWiCParser.TRY2, 0)

        def EXCEPT(self):
            return self.getToken(TommyWiCParser.EXCEPT, 0)

        def statements(self):
            return self.getTypedRuleContext(TommyWiCParser.StatementsContext,0)


        def getRuleIndex(self):
            return TommyWiCParser.RULE_try_except

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTry_except" ):
                return visitor.visitTry_except(self)
            else:
                return visitor.visitChildren(self)




    def try_except(self):

        localctx = TommyWiCParser.Try_exceptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_try_except)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(TommyWiCParser.TRY1)
            self.state = 86
            self.operations(0)
            self.state = 87
            self.match(TommyWiCParser.TRY2)
            self.state = 88
            self.match(TommyWiCParser.EXCEPT)
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 89
                self.operations(0)
                pass

            elif la_ == 2:
                self.state = 90
                self.statements()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_assignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TommyWiCParser.ID, 0)

        def ASSIGN1(self):
            return self.getToken(TommyWiCParser.ASSIGN1, 0)

        def expression(self):
            return self.getTypedRuleContext(TommyWiCParser.ExpressionContext,0)


        def ASSIGN2(self):
            return self.getToken(TommyWiCParser.ASSIGN2, 0)

        def getRuleIndex(self):
            return TommyWiCParser.RULE_var_assign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_assign" ):
                return visitor.visitVar_assign(self)
            else:
                return visitor.visitChildren(self)




    def var_assign(self):

        localctx = TommyWiCParser.Var_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(TommyWiCParser.ID)
            self.state = 94
            self.match(TommyWiCParser.ASSIGN1)
            self.state = 95
            self.expression(0)
            self.state = 96
            self.match(TommyWiCParser.ASSIGN2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TommyWiCParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NotContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TommyWiCParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(TommyWiCParser.NOT, 0)
        def expression(self):
            return self.getTypedRuleContext(TommyWiCParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot" ):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TommyWiCParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OR1(self):
            return self.getToken(TommyWiCParser.OR1, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TommyWiCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(TommyWiCParser.ExpressionContext,i)

        def OR2(self):
            return self.getToken(TommyWiCParser.OR2, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TommyWiCParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def AND1(self):
            return self.getToken(TommyWiCParser.AND1, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TommyWiCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(TommyWiCParser.ExpressionContext,i)

        def AND2(self):
            return self.getToken(TommyWiCParser.AND2, 0)
        def AND3(self):
            return self.getToken(TommyWiCParser.AND3, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)


    class VarexprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TommyWiCParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(TommyWiCParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarexpr" ):
                return visitor.visitVarexpr(self)
            else:
                return visitor.visitChildren(self)


    class TrueexprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TommyWiCParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(TommyWiCParser.TRUE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrueexpr" ):
                return visitor.visitTrueexpr(self)
            else:
                return visitor.visitChildren(self)


    class NumberexprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TommyWiCParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(TommyWiCParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberexpr" ):
                return visitor.visitNumberexpr(self)
            else:
                return visitor.visitChildren(self)


    class FalseexprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TommyWiCParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FALSE(self):
            return self.getToken(TommyWiCParser.FALSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFalseexpr" ):
                return visitor.visitFalseexpr(self)
            else:
                return visitor.visitChildren(self)


    class LessContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TommyWiCParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TommyWiCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(TommyWiCParser.ExpressionContext,i)

        def LESS1(self):
            return self.getToken(TommyWiCParser.LESS1, 0)
        def LESS2(self):
            return self.getToken(TommyWiCParser.LESS2, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLess" ):
                return visitor.visitLess(self)
            else:
                return visitor.visitChildren(self)


    class NoteqContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TommyWiCParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TommyWiCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(TommyWiCParser.ExpressionContext,i)

        def NOTEQ1(self):
            return self.getToken(TommyWiCParser.NOTEQ1, 0)
        def NOTEQ2(self):
            return self.getToken(TommyWiCParser.NOTEQ2, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNoteq" ):
                return visitor.visitNoteq(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TommyWiCParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                localctx = TommyWiCParser.VarexprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
